cmake_minimum_required(VERSION 3.11)
project(vactube-server)

find_package(gRPC CONFIG REQUIRED)
find_package(yaml-cpp CONFIG REQUIRED)
find_package(protobuf CONFIG REQUIRED)
find_package(cxxopts CONFIG REQUIRED)
find_package(fmt REQUIRED)
find_package(unofficial-http-parser REQUIRED)
find_package(restinio CONFIG REQUIRED)
find_package(leveldb CONFIG REQUIRED)
find_package (Boost COMPONENTS log log_setup REQUIRED)

find_path(BOTAN_INCLUDE_DIR botan/botan.h)
IF (WIN32)
find_library(BOTAN_LIBRARY botan)
ELSE()
find_library(BOTAN_LIBRARY botan-2)
ENDIF()

find_path(PICOJSON_INCLUDE_DIR picojson/picojson.h)

add_executable(vactube-server src/server.cc src/utilities.cc src/quoil.grpc.pb.cc src/quoil.pb.cc)
target_include_directories(vactube-server PRIVATE ${BOTAN_INCLUDE_DIR} ${PICOJSON_INCLUDE_DIR} ${Boost_INCLUDE_DIRS})
IF (WIN32)
target_link_libraries(vactube-server PRIVATE ${BOTAN_LIBRARY} ${Boost_LIBRARIES} leveldb::leveldb restinio::restinio cxxopts::cxxopts gRPC::gpr gRPC::grpc gRPC::grpc++ gRPC::grpc++_alts yaml-cpp protobuf::libprotoc protobuf::libprotobuf protobuf::libprotobuf-lite)
ELSE()
target_link_libraries(vactube-server PRIVATE ${BOTAN_LIBRARY} ${Boost_LIBRARIES} spdlog::spdlog spdlog::spdlog_header_only leveldb::leveldb restinio::restinio gcov cxxopts::cxxopts gRPC::gpr gRPC::grpc gRPC::grpc++ gRPC::grpc++_alts yaml-cpp protobuf::libprotoc protobuf::libprotobuf protobuf::libprotobuf-lite)
ENDIF()